2011-01-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.68 released.

        * Dozens of changes in conjunction with hundreds of
          changes in FullAuto. 'use strict' and 'use warnings'
          are NOW TURNED *ON* in both Menus and FullAuto.


2011-01-18  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.67 released.

        * Fixed EXPORT issue - THANKS to Yogesh Sawant for
          pointing this out.


2011-01-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.66 released.

        * Massive strict cleanup.


2011-01-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.65 released.

        * Attempting fix to Input Version for CPAN parser.


2011-01-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.64 released.

        * Temporarily included new module Term::Input as
          package Input inside of Term::Menus until CPAN
          approves Term::Menu for inclusion in the Module
          List.


2011-01-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.63 released.

        * Updated to use new Term::Input in order to capture
          arrow keys for easy scrolling and navigation.


2011-01-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.62 released.

        * Added more new code to support FullAuto 'service/daemon'
          functionality. Functionality now WORKS.


2011-01-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.61 released.

        * Added more new code to support FullAuto 'Plan'
          functionality. Functionality now WORKS.


2010-12-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.60 released.

        * HAPPY NEW YEAR!

        * Added LOTS of new code to support FullAuto 'Plan'
          functionality.


2010-12-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.59 released.