@@ -13,7 +13,7 @@ name: Term-Menus
 provides:
   Term::Menus:
     file: lib/Term/Menus.pm
-    version: 1.68
+    version: 1.69
   TMMemHandle:
     file: lib/Term/Menus.pm
   RawInput:
@@ -25,4 +25,4 @@ requires:
 #  Term::RawInput: 0
 resources:
   license: http://opensource.org/licenses/gpl-license.php
-version: 1.68
+version: 1.69
